--- a/src/DiveList.css
+++ b/src/DiveList.css
@@ -1,4 +1,22 @@
 .dive-line {
-  display: block;
+  border-left: 3px solid #ccc;
+  padding: .5em;
+  margin: 1em 0;
+  border-radius: .5em;
+}
+
+.dive-summary {
+  display: flex;
   user-select: none;
+  align-items: center;
+  justify-content: space-between;
+  transition: background 300ms;
+}
+
+.dive-summary:hover, .dive-details:hover {
+  background: #eee;
+}
+
+.dive-details {
+  font-size: .8em;
 }
