--- a/src/DiveList.css
+++ b/src/DiveList.css
@@ -5,7 +5,7 @@
 */
 
 .dive-line {
-  border-left: 3px solid #ccc;
+  border-inline: 3px solid #ccc;
   padding: 0.5em;
   margin: 1em 0;
   border-radius: 0.5em;
