Do not use position:sticky when the dive isn't expanded

--- a/src/DiveList.css
+++ b/src/DiveList.css
@@ -17,6 +17,9 @@
   align-items: center;
   transition: background 300ms;
   gap: 2rem;
+}
+
+.dive-summary--isShown {
   position: sticky;
   top: 0;
 }
